Change profile picture size rounded posters corners and ajust their size on mobile change virtual room project button size fix Other button text placement remove useless commented lines

--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,20 @@ footer>div
   transition: background-color 0.3s ease;
 }
 
+.virtual-room-projects-button
+{
+  border-radius: 15px;
+  text-decoration: none;
+  color: #252525;
+  font-weight: bold;
+  background-color: #DDDDDD;
+  padding : 15px 40px;
+  margin: 20px;
+  width: 180px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
 #hire
 {
   display: flex;
@@ -499,6 +513,7 @@ footer>div
 {
   height: 500px;
   width: auto;
+  border-radius: 20px;
 }
 
 #project-description
@@ -679,14 +694,23 @@ button p
     width: 80%;
   }
 
+  .pp
+  {
+    width: 150px;
+    height: 150px;
+  }
+
   .pp-container
   {
-    left: calc(50% - 120px);
+    top: 170px;
+    left: calc(50% - 85px);
+    width: 170px;
+    height: 170px;
   }
 
   #menu-bar
   {
-    height: 370px;
+    height: 280px;
     align-items: flex-end;
     justify-content: center;
   }
@@ -707,16 +731,14 @@ button p
   }
 
   .timeline-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 75px;
     height: 50px;
   }
 
   .timeline-btn img {
-    max-width: 50px; /* Limite la largeur maximale */
-    max-height: 50px; /* Limite la hauteur maximale */
-  }
-
-  .timeline-btn p {
     max-width: 50px; /* Limite la largeur maximale */
     max-height: 50px; /* Limite la hauteur maximale */
   }
@@ -745,7 +767,7 @@ button p
     flex-direction: column;
   }
 
-  .projects-button
+  .projects-button, .virtual-room-projects-button
   {
     font-size: 1.7em;
   }
@@ -770,6 +792,12 @@ button p
   .title-separator
   {
     height: 150px;
+  }
+
+  #project-summary .poster
+  {
+    height: auto;
+    width: 300px;
   }
 }
 
